--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -1,155 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:orientation="vertical" android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
-    <ImageView android:layout_width="wrap_content"
-               android:id="@+id/next"
-               app:layout_constraintTop_toTopOf="parent"
-               app:layout_constraintRight_toRightOf="parent"
-               app:layout_constraintBottom_toTopOf="@id/linButton"
-               app:srcCompat="@drawable/ic_navigate_next"
-               android:layout_height="wrap_content"/>
 
-    <ImageView android:layout_width="wrap_content"
-               app:layout_constraintTop_toTopOf="parent"
-               android:id="@+id/before"
-               app:layout_constraintLeft_toLeftOf="parent"
-               app:layout_constraintBottom_toTopOf="@id/linButton"
-               app:srcCompat="@drawable/ic_navigate_before"
-               android:layout_height="wrap_content"/>
-
-    <FrameLayout
-            android:id="@+id/cardContainer"
-            android:layout_width="0dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="18dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/next"
-            app:layout_constraintLeft_toRightOf="@id/before"
-            app:layout_constraintBottom_toTopOf="@id/linButton"
-            android:layout_height="0dp"
-    >
-        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-                                                           android:id="@+id/cartBack"
-                                                           android:layout_height="match_parent">
-            <ScrollView android:layout_width="match_parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/goToFront"
-                        android:layout_height="0dp">
-                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-                                                                   android:layout_height="wrap_content">
-                    <TextView
-                            android:id="@+id/content"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintLeft_toLeftOf="parent"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginLeft="8dp"
-                            style="@style/Text"
-                            android:layout_width="wrap_content" android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"/>
-
-                    <ImageView
-                            android:id="@+id/voicePlay"
-                            android:layout_width="wrap_content"
-                            app:layout_constraintTop_toTopOf="parent"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginRight="8dp"
-                            app:layout_constraintRight_toRightOf="parent"
-                            app:srcCompat="@drawable/ic_volume"
-                            android:layout_height="wrap_content" android:layout_marginEnd="8dp"/>
-
-                    <TextView android:layout_width="wrap_content"
-                              android:id="@+id/sentence"
-                              app:layout_constraintTop_toBottomOf="@id/content"
-                              app:layout_constraintLeft_toLeftOf="parent"
-                              android:layout_marginTop="8dp"
-                              android:layout_marginLeft="8dp"
-                              android:layout_height="wrap_content" android:layout_marginStart="8dp"/>
-
-                    <TextView android:layout_width="wrap_content"
-                              android:id="@+id/info"
-                              android:text="sdfdf"
-                              android:fontFamily="@font/iran_sans_fa_num_medium"
-
-                              app:layout_constraintTop_toBottomOf="@id/sentence"
-                              app:layout_constraintLeft_toLeftOf="parent"
-                              android:layout_marginLeft="8dp"
-                              android:layout_marginTop="8dp"
-                              android:layout_height="wrap_content"/>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </ScrollView>
-
-            <ImageView android:layout_width="wrap_content"
-                       android:id="@+id/goToFront"
-                       app:layout_constraintBottom_toBottomOf="parent"
-                       app:layout_constraintLeft_toLeftOf="parent"
-                       android:layout_marginLeft="8dp"
-                       android:layout_marginBottom="8dp"
-                       android:padding="8dp"
-                       app:srcCompat="@drawable/ic_card_front"
-                       android:layout_height="wrap_content"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-                                                           android:id="@+id/cartFront"
-                                                           android:background="@android:color/white"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
+             android:layout_width="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                       android:orientation="vertical"
+                                                       android:visibility="gone"
+                                                       android:id="@+id/leitnerView"
+                                                       android:layout_width="match_parent"
                                                        android:layout_height="match_parent">
-            <TextView
-                    android:id="@+id/contentFront"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:fontFamily="@font/iran_sans_fa_num_medium"
-                    android:text="Front" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+        <ImageView android:layout_width="wrap_content"
+                   android:id="@+id/next"
+                   app:layout_constraintTop_toTopOf="parent"
+                   app:layout_constraintRight_toRightOf="parent"
+                   app:layout_constraintBottom_toTopOf="@id/linButton"
+                   app:srcCompat="@drawable/ic_navigate_next"
+                   android:layout_height="wrap_content"/>
 
-            <ImageView android:layout_width="wrap_content"
-                       app:srcCompat="@drawable/ic_card_back"
-                       android:layout_height="wrap_content"
-                       app:layout_constraintLeft_toLeftOf="parent"
-                       android:layout_marginLeft="8dp"
-                       android:padding="8dp"
-                       android:id="@+id/goToBack"
-                       android:layout_marginBottom="8dp"
-                       app:layout_constraintBottom_toBottomOf="parent"/>
+        <ImageView android:layout_width="wrap_content"
+                   app:layout_constraintTop_toTopOf="parent"
+                   android:id="@+id/before"
+                   app:layout_constraintLeft_toLeftOf="parent"
+                   app:layout_constraintBottom_toTopOf="@id/linButton"
+                   app:srcCompat="@drawable/ic_navigate_before"
+                   android:layout_height="wrap_content"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </FrameLayout>
+        <FrameLayout
+                android:id="@+id/cardContainer"
+                android:layout_width="0dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="18dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/next"
+                app:layout_constraintLeft_toRightOf="@id/before"
+                app:layout_constraintBottom_toTopOf="@id/linButton"
+                android:layout_height="0dp"
+        >
+            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+                                                               android:id="@+id/cartBack"
+                                                               android:layout_height="match_parent">
+                <ScrollView android:layout_width="match_parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintBottom_toTopOf="@id/goToFront"
+                            android:layout_height="0dp">
+                    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+                                                                       android:layout_height="wrap_content">
+                        <TextView
+                                android:id="@+id/content"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginLeft="8dp"
+                                style="@style/Text"
+                                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                                android:layout_marginStart="8dp"/>
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:orientation="horizontal"
-                  android:id="@+id/linButton"
-                  android:layout_marginBottom="8dp"
-                  android:layout_marginLeft="8dp"
-                  android:layout_marginRight="8dp"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  app:layout_constraintRight_toRightOf="parent"
-                  app:layout_constraintLeft_toLeftOf="parent"
-                  android:layout_height="wrap_content">
-        <TextView android:layout_width="0dp"
-                  android:id="@+id/know"
-                  style="@style/Button"
-                  android:text="@string/know"
-                  android:layout_marginRight="5dp"
-                  android:layout_weight="0.5" android:layout_height="wrap_content" android:layout_marginEnd="5dp"/>
+                        <ImageView
+                                android:id="@+id/voicePlay"
+                                android:layout_width="wrap_content"
+                                app:layout_constraintTop_toTopOf="parent"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginRight="8dp"
+                                app:layout_constraintRight_toRightOf="parent"
+                                app:srcCompat="@drawable/ic_volume"
+                                android:layout_height="wrap_content" android:layout_marginEnd="8dp"/>
 
-        <TextView android:layout_width="0dp"
-                  android:layout_marginLeft="5dp"
-                  android:text="@string/dont_know"
-                  android:id="@+id/notKnow"
-                  style="@style/Button"
-                  android:layout_weight="0.5" android:layout_height="wrap_content"
-                  android:layout_marginStart="5dp"/>
+                        <TextView android:layout_width="wrap_content"
+                                  android:id="@+id/sentence"
+                                  app:layout_constraintTop_toBottomOf="@id/content"
+                                  app:layout_constraintLeft_toLeftOf="parent"
+                                  android:layout_marginTop="8dp"
+                                  android:layout_marginLeft="8dp"
+                                  android:layout_height="wrap_content" android:layout_marginStart="8dp"/>
 
-    </LinearLayout>
+                        <TextView android:layout_width="wrap_content"
+                                  android:id="@+id/info"
+                                  android:text="sdfdf"
+                                  android:fontFamily="@font/iran_sans_fa_num_medium"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                                  app:layout_constraintTop_toBottomOf="@id/sentence"
+                                  app:layout_constraintLeft_toLeftOf="parent"
+                                  android:layout_marginLeft="8dp"
+                                  android:layout_marginTop="8dp"
+                                  android:layout_height="wrap_content"/>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </ScrollView>
+
+                <ImageView android:layout_width="wrap_content"
+                           android:id="@+id/goToFront"
+                           app:layout_constraintBottom_toBottomOf="parent"
+                           app:layout_constraintLeft_toLeftOf="parent"
+                           android:layout_marginLeft="8dp"
+                           android:layout_marginBottom="8dp"
+                           android:padding="8dp"
+                           app:srcCompat="@drawable/ic_card_front"
+                           android:layout_height="wrap_content"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+                                                               android:id="@+id/cartFront"
+                                                               android:background="@android:color/white"
+                                                               android:layout_height="match_parent">
+                <TextView
+                        android:id="@+id/contentFront"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="8dp"
+                        android:fontFamily="@font/iran_sans_fa_num_medium"
+                        android:text="Front" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                        android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+
+                <ImageView android:layout_width="wrap_content"
+                           app:srcCompat="@drawable/ic_card_back"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintLeft_toLeftOf="parent"
+                           android:layout_marginLeft="8dp"
+                           android:padding="8dp"
+                           android:id="@+id/goToBack"
+                           android:layout_marginBottom="8dp"
+                           app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:orientation="horizontal"
+                      android:id="@+id/linButton"
+                      android:layout_marginBottom="8dp"
+                      android:layout_marginLeft="8dp"
+                      android:layout_marginRight="8dp"
+                      app:layout_constraintBottom_toBottomOf="parent"
+                      app:layout_constraintRight_toRightOf="parent"
+                      app:layout_constraintLeft_toLeftOf="parent"
+                      android:layout_height="wrap_content">
+            <TextView android:layout_width="0dp"
+                      android:id="@+id/know"
+                      style="@style/Button"
+                      android:text="@string/know"
+                      android:layout_marginRight="5dp"
+                      android:layout_weight="0.5" android:layout_height="wrap_content" android:layout_marginEnd="5dp"/>
+
+            <TextView android:layout_width="0dp"
+                      android:layout_marginLeft="5dp"
+                      android:text="@string/dont_know"
+                      android:id="@+id/notKnow"
+                      style="@style/Button"
+                      android:layout_weight="0.5" android:layout_height="wrap_content"
+                      android:layout_marginStart="5dp"/>
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
+                    android:id="@+id/noLeitner"
+                    android:visibility="gone"
+    >
+        <TextView android:layout_width="wrap_content"
+                  android:layout_centerInParent="true"
+                  android:layout_height="wrap_content"
+                  android:text="@string/no_leitner_list"
+        />
+    </RelativeLayout>
+</FrameLayout>
